# httpkafka

./: CMakeLists.txt
inc/: kafka_rest_api.h  proxy_consumer.h  proxy_producer.h
proto/: position_report.proto
src/: kafka_message.h  kafka_rest_api.cpp  kafka_rest_api.h  main.cpp  proxy_consumer.cpp  proxy_producer.cpp
